--- a/styles/style.css
+++ b/styles/style.css
@@ -38,27 +38,37 @@
   
   
   /* Header */
-  .header {
+.header {
     background-color: var(--luxus-red-dark);
     padding: 1rem;
-  }
-  
-  .header-content {
-    text-transform: uppercase;
+}
+
+.header-content {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-  }
-  
-  .logo {
-    width: 120px;
-  }
-  
-  /* Links del header */
-  .header-links a {
+    width: 100%;
+}
+
+.logo {
+    height: 70px;
+    cursor: pointer;
+}
+
+.header-links {
+    display: flex;
+    gap: 1.5rem;
+    margin: 0 auto;
+}
+
+/* Links del header */
+.header-links a {
     color: var(--luxus-beige);
     text-decoration: none;
-    margin: 0 1rem;
     font-weight: bold;
-  }
+    text-transform: uppercase;
+}
+
   
   /* Hero Section */
   .hero-main {
@@ -89,43 +99,73 @@
     text-align: center;
   }
   
-  .signature img {
-    width: 250px;
-    margin: 1rem;
+  .signature-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 4rem 0;
+}
+
+.signature-item {
+    flex: 1 1 calc(25% - 20px);
+    max-width: 100%; 
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.signature-item img {
+    width: 390px;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 8px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .signature-item img:hover {
+    transform: scale(0.9); 
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3); 
+}
+
+.signature-item p {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    font-family: var(--font-text);
+    color: var(--luxus-green-dark);
+    text-align: center;
   }
   
   /* Collections */
-  .womens-collection, .mens-collection {
+.womens-collection, .mens-collection {
     text-align: center;
     margin-top: 5rem;
     margin-bottom: 5rem;
 
   }
   
-  .womens-collection img, .mens-collection img {
+.womens-collection img, .mens-collection img {
     width: 100%;
     max-width: 100%;
-
   }
-  .collection-item {
+  
+.collection-item {
     position: relative;
     text-align: center;
     margin: 2rem 0;
   }
   
-  .collection-link {
+.collection-link {
     display: block;
     position: relative;
   }
   
-  .collection-link img {
+.collection-link img {
     width: 100%;
     height: auto;
     display: block;
-    border-radius: 10px;
   }
   
-  .collection-link h2 {
+.collection-link h2 {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -138,77 +178,112 @@
   
   
   /* Footer */
-  .footer {
+.footer {
     background-color: var(--luxus-red-dark);
     color: white;
+    font-family: var(--font-text);
+    font-size: 1rem;
     padding: 2rem 1rem;
     text-align: center;
   }
   
-  
-  .footer-section {
+.footer-section {
     margin: 1rem;
   }
   
-  .footer-section a {
-    color: white;
+.footer-section a {
+    color: var(--luxus-orange-dark);
     text-decoration: none;
   }
   
-  .footer-bottom {
+.footer-bottom {
     text-align: center;
     margin-top: 2rem;
-    font-size: 0.9rem;
+    font-size: 0.5rem;
   }
     
-    .logo {
-        height: 70px;
-        cursor: pointer;
-    }
+.logo {
+     height: 70px;
+    cursor: pointer;
+}
     
-    .small-social {
+.small-social {
         width: 24px;
         height: 24px;
-    }
+}
     
   /* Responsive Design */
   @media (max-width: 992px) {
     .hero-text h1 {
-      font-size: 3rem;
+        font-size: 3rem;
     }
-  }
-  
-  @media (max-width: 768px) {
-    .nav-links {
-      display: none;
+}
+
+.header-links {
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+@media (max-width: 768px) {
+    .header-links {
+        display: none;
     }
-  
+
+    .header-links {
+        display: flex; 
+        align-items: center; 
+        width: 100%;
+    }
+    
     .menu-toggle {
-      display: block;
-      font-size: 2rem;
-      color: var(--luxus-beige);
-      background: none;
-      border: none;
+        display: block;
+        font-size: 2rem;
+        color: var(--luxus-beige);
+        background: none;
+        border: none;
     }
-  
-    .nav-links.active {
-      display: flex;
-      flex-direction: column;
-      background-color: var(--luxus-red-dark);
-      position: absolute;
-      top: 80px;
-      width: 100%;
-      left: 0;
+
+    .header-links.active {
+        display: flex;
+        flex-direction: column;
+        background-color: var(--luxus-red-dark);
+        position: absolute;
+        top: 80px;
+        width: 100%;
+        left: 0;
     }
-  
-    .nav-links.active a {
-      margin: 1rem 0;
+
+    .header-links.active a {
+        margin: 1rem 0;
     }
-  }
-  
-  @media (max-width: 576px) {
+}
+
+.menu-toggle {
+    display: block;
+    font-size: 2rem;
+    color: var(--luxus-beige);
+    background: none;
+    border: none;
+}
+
+.header-links.active {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--luxus-red-dark);
+    position: absolute;
+    top: 80px;
+    width: 100%;
+    left: 0;
+}
+
+.header-links.active a {
+    margin: 1rem 0;
+}
+
+
+@media (max-width: 576px) {
     .hero-text h1 {
-      font-size: 2rem;
+        font-size: 2rem;
     }
-  }
-  
+}
