--- a/styles/style.css
+++ b/styles/style.css
@@ -266,7 +266,7 @@
 
 /* Hero de Signature Collection */
 .hero-signature {
-  background: url('../assets/hero-history.jpg') no-repeat center center/cover;
+  background: url('../assets/hero-signature.jpg') no-repeat center center/cover;
   height: 70vh;
   display: flex;
   justify-content: center;
