--- a/styles/style.css
+++ b/styles/style.css
@@ -117,13 +117,13 @@
   .hero-text h1 {
     font-family: var(--font-main);
     font-size: 8rem;
-    color: var(--luxus-beige);
+    color: white;
   }
   
   .hero-text p {
     font-size: 4rem;
     margin-top: 1rem;
-    color: var(--luxus-orange-dark);
+    color: var(--luxus-beige);
   }
   /* Hero de Men's Collection */
 .hero-men {
@@ -137,7 +137,7 @@
 
 .hero-men h1 {
   font-size: 4rem;
-  color: var(--luxus-beige);
+  color: white;
   text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
 }
 
@@ -206,7 +206,7 @@
 
 .hero-women h1 {
   font-size: 4rem;
-  color: var(--luxus-beige);
+  color: white;
   text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
 }
 
