[update] added womans foundation for product placement & modified header for all pages

--- a/styles/style.css
+++ b/styles/style.css
@@ -605,8 +605,8 @@ min-height: 150px;
 }
 
 button {
-background-color: var(--luxus-orange-dark);
-color: var(--luxus-beige);
+background-color: var(--luxus-red-dark);
+color: white;
 padding: 1rem 2rem;
 border: none;
 border-radius: 8px;
@@ -616,7 +616,7 @@ transition: background-color 0.3s ease;
 }
 
 button:hover {
-background-color: var(--luxus-green-dark);
+background-color: var(--luxus-orange-dark);
 }
 
 
